# haskell-exercises

./: .gitignore  README.md
01-GADTs/: exercise01.cabal
01-GADTs/src/: Answers.hs  Exercises.hs
03-KindSignatures/: exercise03.cabal
03-KindSignatures/src/: Answers.hs  Exercises.hs
04-DataKinds/: exercise04.cabal
04-DataKinds/src/: Answers.hs  DataKinds.hs
05-RankNTypes/: exercise05.cabal
05-RankNTypes/src/: Exercises.hs  RankNTypes.hs
06-TypeFamilies/: exercise06.cabal
06-TypeFamilies/src/: Answers.hs
07-ConstraintKinds/: exercise07.cabal
07-ConstraintKinds/src/: Exercises.hs
08-PolyKinds/: exercise08.cabal
09-MultiParamTypeClasses/: exercise09.cabal
10-FunctionalDependencies/: exercise10.cabal
11-Singletons/: exercise11.cabal  package.yaml
11-Singletons/.stack-work/ghci/2828cc4c/: cabal_macros.h
11-Singletons/.stack-work/install/x86_64-osx/lts-13.23/8.6.5/flag-cache/: exercise11-0.1.0.0-An4uNzvgz24Aavpi9F3b5w
11-Singletons/.stack-work/install/x86_64-osx/lts-13.23/8.6.5/lib/x86_64-osx-ghc-8.6.5/: libHSexercise11-0.1.0.0-An4uNzvgz24Aavpi9F3b5w-ghc8.6.5.dylib
11-Singletons/.stack-work/install/x86_64-osx/lts-13.23/8.6.5/lib/x86_64-osx-ghc-8.6.5/exercise11-0.1.0.0-An4uNzvgz24Aavpi9F3b5w/: Exercises1.dyn_hi  Exercises1.hi
11-Singletons/src/: Answers1.hs  Answers2.hs  Answers3.hs  Answers4.hs  Exercises1.hs  Exercises2.hs  Exercises3.hs  Exercises4.hs
12-Vectors/: exercise12.cabal  package.yaml
12-Vectors/src/: Exercises1.hs
