name:                exercise06
version:             0.1.0.0
build-type:          Simple
cabal-version:       >= 1.10

library
  default-language: Haskell2010
  build-depends:    base
  hs-source-dirs:   src
  ghc-options:  -Wall -Werror -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat -Widentities -Wredundant-constraints -fhide-source-paths -Wpartial-fields
  default-extensions: LambdaCase DeriveGeneric FlexibleInstances FlexibleContexts ScopedTypeVariables TypeApplications MultiParamTypeClasses RecordWildCards TypeApplications TypeFamilies GADTs PolyKinds DataKinds RankNTypes TemplateHaskell TypeOperators UndecidableInstances KindSignatures
  exposed-modules:  TypeFamilies
                  , Exercises
                  , Answers
