name:                exercise08
version:             0.1.0.0
build-type:          Simple
cabal-version:       >= 1.10

library
  default-language: Haskell2010
  build-depends:    base
  hs-source-dirs:   src
  ghc-options: -Weverything -Wno-missed-specialisations -Wno-all-missed-specialisations -Wno-unsafe -Wno-safe -Wno-missing-local-signatures -Wno-monomorphism-restriction -Wno-implicit-prelude -Werror -Wwarn=missing-home-modules
  default-extensions: LambdaCase DeriveGeneric FlexibleInstances FlexibleContexts ScopedTypeVariables TypeApplications MultiParamTypeClasses RecordWildCards TypeApplications TypeFamilies GADTs PolyKinds DataKinds RankNTypes TemplateHaskell TypeOperators UndecidableInstances KindSignatures
  exposed-modules:  PolyKinds
                  , Exercises

